# expert-guacamole

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: data.csv  main.py  movies_scraper.py
src/config/: __init__.py  env.py  logger.py
